--- a/appspec.yml
+++ b/appspec.yml
@@ -1,16 +1,22 @@
 version: 0.0
+
 os: linux
+
 files:
-  - source: /dockerfile
-    destination: /var/www/html/
+  - source: /
+    destination: /opt/my-app
+
 hooks:
   BeforeInstall:
     - location: install_dependencies
       timeout: 300
       runas: root
-    - location: start_server
+
+  ApplicationStart:
+    - location: star_server
       timeout: 300
       runas: root
+
   ApplicationStop:
     - location: stop_server
       timeout: 300
