--- a/appspec.yml
+++ b/appspec.yml
@@ -13,7 +13,7 @@ hooks:
       runas: root
 
   ApplicationStart:
-    - location: star_server
+    - location: start_server
       timeout: 300
       runas: root
 
