--- a/appspec.yml
+++ b/appspec.yml
@@ -1,23 +1,12 @@
 version: 0.0
-
 os: linux
 
-files:
-  - source: /
-    destination: /var/www/html/
-
 hooks:
-  BeforeInstall:
-    - location: install_dependencies
-      timeout: 300
-      runas: root
-
-  ApplicationStart:
-    - location: start_server
-      timeout: 300
-      runas: root
-
   ApplicationStop:
     - location: stop_server
+      timeout: 300
+      runas: root
+  AfterInstall:
+    - location: start_server
       timeout: 300
       runas: root
