--- a/appspec.yml
+++ b/appspec.yml
@@ -1,16 +1,13 @@
+
 version: 0.0
 os: linux
 
 hooks:
-  BeforeInstall:
-    - location: install_dependencies
-      timeout: 300
-      runas: root
   ApplicationStop:
-    - location: stop_server
+    - location: scripts/stop_container.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: start_server
+    - location: scripts/start_container.sh
       timeout: 300
       runas: root
