--- a/appspec.yml
+++ b/appspec.yml
@@ -4,10 +4,10 @@ os: linux
 
 hooks:
   ApplicationStop:
-    - location: scripts/stop_container.sh
+    - location: stop_server
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/start_container.sh
+    - location: start_server
       timeout: 300
       runas: root
