--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,10 @@ version: 0.0
 os: linux
 
 hooks:
+  BeforeInstall:
+    - location: install_dependencies
+      timeout: 300
+      runas: root
   ApplicationStop:
     - location: stop_server
       timeout: 300
