--- a/appspec.yml
+++ b/appspec.yml
@@ -7,14 +7,14 @@ files:
 
 hooks:
   BeforeInstall:
-    - location: install_dependencies
+    - location: /opt/codedeploy-agent/deployment-root/install_dependencies
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: stop_server
+    - location: /opt/codedeploy-agent/deployment-root/stop_server
       timeout: 300
       runas: root
   AfterInstall:
-    - location: start_server
+    - location: /opt/codedeploy-agent/deployment-root/start_server
       timeout: 300
       runas: root
