--- a/appspec.yml
+++ b/appspec.yml
@@ -1,20 +1,18 @@
 
 version: 0.0
 os: linux
-files:
-  - source: /
-    destination: /opt/codedeploy-agent/deployment-root/
+
 
 hooks:
   BeforeInstall:
-    - location: /opt/codedeploy-agent/deployment-root/install_dependencies
+    - location: install_dependencies
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: /opt/codedeploy-agent/deployment-root/stop_server
+    - location: stop_server
       timeout: 300
       runas: root
   AfterInstall:
-    - location: /opt/codedeploy-agent/deployment-root/start_server
+    - location: start_server
       timeout: 300
       runas: root
